--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,12 +7,24 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: windows-latest
+    #runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       # Step 1: Checkout the code
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      # Step 2: Install Docker Compose (if needed)
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.17.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
+
+      # Step 3: Build the Docker container
+      - name: Build Docker container
+        run: docker-compose up -d --build
 
       # Step 2: Set up Docker
       - name: Set up Docker
