CI/CD pipeline ready

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,11 @@ jobs:
           sudo curl -L "https://github.com/docker/compose/releases/download/v2.17.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose --version
+            # Step 4: Run the Docker container
+      - name: Remove Docker container
+        run: |
+          docker stop flask-app
+          docker rm flask-app
 
       # Step 3: Build the Docker container
       - name: Build Docker container
@@ -40,6 +45,6 @@ jobs:
       # Step 4: Run the Docker container
       - name: Run Docker container
         run: |
-          docker stop flask-app || true
-          docker rm flask-app || true
+          docker stop flask-app
+          docker rm flask-app
           docker run -d -p 5000:5000 --name flask-app flask-app
